# python-monthly-topic-cli

./: README.md  pyproject.toml
src/python_monthly_topic_cli/: __main__.py
src/python_monthly_topic_cli/cli/: __init__.py  main.py
