[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-monthly-topic-cli"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Junya Fukuda", email = "junya.fukuda.e@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
]

[project.urls]
Documentation = "https://github.com/Junya Fukuda/python-monthly-topic-cli#readme"
Issues = "https://github.com/Junya Fukuda/python-monthly-topic-cli/issues"
Source = "https://github.com/Junya Fukuda/python-monthly-topic-cli"

[project.scripts]
python-monthly-topic-cli = "python_monthly_topic_cli.cli:python_monthly_topic_cli"

[tool.hatch.version]
path = "src/python_monthly_topic_cli/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/python_monthly_topic_cli tests}"

[tool.coverage.run]
source_pkgs = ["python_monthly_topic_cli", "tests"]
branch = true
parallel = true
omit = [
  "src/python_monthly_topic_cli/__about__.py",
]

[tool.coverage.paths]
python_monthly_topic_cli = ["src/python_monthly_topic_cli", "*/python-monthly-topic-cli/src/python_monthly_topic_cli"]
tests = ["tests", "*/python-monthly-topic-cli/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
